--- a/assets/style.css
+++ b/assets/style.css
@@ -21,10 +21,10 @@ header{
 .speaker-view, .enlarge{
     background-color: rgba(73, 72, 72, 0.5);
     max-width: max-content;
-    padding: .2em;
+    /* padding: .2em; */
     margin-right: 10px;
     border-radius: 5px;
-    display: flex;
+    /* display: flex; */
     align-items: center;
 }
 
@@ -61,17 +61,48 @@ main .container{
 /* footer */
 
 footer{
+    height: 100px;
     background-color: rgb(62, 61, 61);
     color: white;
-    padding: 10px;
-    font-size: smaller;
+    padding-left: 10px;
 }
 
 footer .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 100px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    
 }
+
+.btn{
+    height: 100%;
+    width: 80px;
+    position: relative;
+}
+
+.icona{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translateY(-80%);
+}
+
+.description{
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    /* transform: translate(-50%, 0); */
+}
+
+.fa-chevron-up{
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translateY(-80%);
+}
+/*
 
 .audio-video{
     display: flex;
@@ -94,17 +125,17 @@ footer .container{
     background-color: grey;
     color: red;
     padding: 1.5em;
-    height: 100%;
+    /* height: 100%; */
 }
 
-.fa-solid, .bi{
+/* .fa-solid, .bi{
     height: 30px;
 }
 
 .audio-video>*, .central-icons>*{
-    /* display: flex;
+    display: flex;
     flex-direction: column;          TODO: 
-    justify-self: center; */
+    justify-self: center;
     margin-right: 5px;
 }
 
@@ -112,4 +143,4 @@ i{
     width: 20px;
     display: flex;
     justify-content: center;
-}
+} */
